--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div>
-		<input type="button" value=" Run" onclick="run(2)" />
+		<input type="button" value=" Run" onclick="run(0)" />
 		<input type="button" value="Walk" onclick="run(300)" />
 		<input type="button" value="Start" onclick="step=Infinity" />
 		<input type="button" value="Stop" onclick="step=0" />
@@ -18,8 +18,8 @@
 		<div><textarea id="codeArea" class="codeArea"></textarea></div>
 		<div id="runArea" class="runArea"></div>
 	</div>
-	<div id="stackArea" class="stackArea"></div>
-	<div id="outputArea" class="outputArea"></div>
+	<div id="stackArea" class="stackArea">&nbsp;</div>
+	<div id="outputArea" class="outputArea">&nbsp;</div>
 	<script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
