--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 		<input type="button" value="Step" onclick="step=1" />
 	</div>
 	<div class="codes">
-		<div><textarea id="codeArea" class="codeArea"></textarea></div>
+		<div><textarea id="codeArea" class="codeArea">
+2>:1->1-00p::00g:         v
+         v%-g00::_v#!`\*:-_$$.v
+     ^g00_                    v
+ ^+1                          <
+                  >         :.^
+		</textarea></div>
 		<div id="runArea" class="runArea"></div>
 	</div>
 	<div id="stackArea" class="stackArea">&nbsp;</div>
